--- a/app/views/register-lasting-power-of-attorney/prepare-lpa.html
+++ b/app/views/register-lasting-power-of-attorney/prepare-lpa.html
@@ -152,9 +152,31 @@ Register a lasting power of attorney: Preparing to make your LPA
       <li>how well they look after their own affairs, for example their finances</li>
       <li>how well you know them</li>
       <li>if you trust them to make decisions in your best interests</li>
-      
+      <li>how happy they will be to make decisions for you</li>
 
     </ul>
+
+  <p>Read about an <a href="#">attorney's responsibilities</a> to help you with your decision.</p>  
+  
+  <p>Your attorney does not need to live in the UK, be a British citizen or have legal training.</p>
+
+  <p>You cannot choose someone who is subject to a <a href="/options-for-dealing-with-your-debts/debt-relief-orders">Debt Relief Order</a> or <a href="/becoming-bankrupt/applying-to-become-bankrupt">someone who is bankrupt</a> if you're making an LPA for property and affairs.</p>
+
+  <h3 class="govuk-heading-s">If there's more than one attorney</h3>
+
+  <p>It's important to choose people who can work well together.</p>
+  <p>If you're appointing more than one person, you must decide if they'll make decisions either:</p>
+
+  <ul class="govuk-list govuk-list--bullet">
+    <li>separately or together (known as 'jointly and severally') - which means attorneys can make decisions on their own or with other attorneys</li>
+    <li>together (known as 'jointly') - which means all the attorneys have to agree on the decision</li>
+  </ul>
+
+  <p>You can also choose to let them make some decisions'jointly', and then others 'jointly and severally'.</p>
+
+  <p>Attorneys who are appointed jointly must agree together or they cannot make the decision.</p>
+
+   
       <nav class="govuk-prototype-kit-common-templates-pagination" role="navigation" aria-label="Pagination">
 
       {{ govukPagination({
