Complete Preparing chapter

--- a/app/views/register-lasting-power-of-attorney/prepare-lpa.html
+++ b/app/views/register-lasting-power-of-attorney/prepare-lpa.html
@@ -176,7 +176,109 @@ Register a lasting power of attorney: Preparing to make your LPA
 
   <p>Attorneys who are appointed jointly must agree together or they cannot make the decision.</p>
 
-   
+  <h3 class="govuk-heading-s">Appointing an attorney</h3>
+  <p>Talk to the person you want to appoint as your attorney.</p>
+  <p>It's important they:</p>
+  <ul class="govuk-list govuk-list--bullet">
+    <li>agree to be your attorney</li>
+    <li>know what they’ll need to do</li>
+    <li>understand your decisions</li>
+  </ul>
+
+  <p>After you’ve chosen your attorneys, you’ll need to give their name and contact details when making your LPA.</p>
+
+  <p>The Office of the Public Guardian (OPG) will then contact them separately online or by post.</p>
+
+  <h3 class="govuk-heading-s">If an original attorney can no longer act on your behalf</h3>
+
+  <p>You can nominate ‘replacement attorneys’ to step in when you make your LPA.</p>
+  <p>You do not have to appoint a replacement attorney but having one or more makes sure your LPA keeps working.</p>
+  <p>If you have not nominated a replacement attorney, your attorneys will not be able to make decisions jointly.</p>
+  <p>A replacement attorney must meet the same requirements as your other attorneys. If you have more than one replacement, you must decide the order they step in to replace your original attorneys.</p>
+
+  <h2 class="govuk-heading-l">
+    Setting conditions and restrictions
+  </h2> 
+
+  <p>You can limit what your attorneys can do in particular circumstances.</p>
+  <h3 class="govuk-heading-s">Example of a personal welfare LPA condition</h3>
+
+  <div class="govuk-inset-text">
+    <p>If I need to go into care, my attorneys must decide jointly about the home that I go into.</p>
+  </div>
+
+  <h3 class="govuk-heading-s">Example of a property and affairs LPA condition</h3>
+
+  <div class="govuk-inset-text">
+    <p>My attorneys must not sell my home unless I need to pay for care fees.</p>
+  </div>
+
+  <p>Your conditions and restrictions need to be clear. You may want to get legal advice when deciding them.</p>
+  <h2 class="govuk-heading-l">
+    Certificate provider
+  </h2> 
+<p>You’ll need a certificate provider to help you register your LPA.</p>
+<p>Choose an independent person, like a friend, neighbour or professional. Think about someone who you’re comfortable having an open, honest conversation with and who will raise concerns if they think something is wrong.</p>
+<p>They will need to witness your signature as the donor when you make the LPA.</p>
+<p>They will also need to ‘provide a certificate’ or ‘certify’ your LPA by confirming that:</p>
+
+<ul class="govuk-list govuk-list--bullet">
+<li>you understand the decisions you’ve made in the LPA and its purpose</li>
+<li>you are not under pressure to make the LPA</li>
+<li>you are who you say you are</li>
+<li>there’s no other reason that they know of for their LPA not to be created</li>
+</ul>
+
+<h3 class="govuk-heading-s">Who can be your certificate provider</h3>
+
+<p>Your certificate provider needs to:</p>
+<ul class="govuk-list govuk-list--bullet">
+<li>be 18 or over</li>
+<li>have known you for over 2 years</li>
+</ul>
+<p>They can be a legal professional such as a solicitor.</p>
+<p>They must:</p>
+<ul class="govuk-list govuk-list--bullet">
+  <li>not be related to you or in a relationship with you</li>
+  <li>not working in a care home where you or one of your relatives lives</li>
+  <li>ot involved in the LPA in any other way</li>
+</ul>
+
+<h3 class="govuk-heading-s">Appointing your certificate provider</h3>
+
+<p>Talk to the person you want to appoint as your certificate provider.</p>
+<p>It is important they agree to provide a certificate and can prove their identity.</p>
+
+<div class="govuk-inset-text">
+  <p>You cannot change your certificate provider after you’ve made your LPA. You’ll have to apply and pay for a new LPA.</p>
+</div>
+
+<p>You’ll need to provide their name and contact details when making your LPA.</p>
+<p>After they have witnessed your signature, OPG will contact them separately to certify your LPA online or by post.</p>
+
+<h2 class="govuk-heading-l">
+  Other people involved in making your LPA
+</h2> 
+
+<p>You’ll need to provide names and contact details of any people you want to be involved in making your LPA.</p>
+
+<h3 class="govuk-heading-s">Tell people about your LPA</h3>
+
+<p>You can choose up to 5 people to be told about your LPA. They’re called ‘people to notify’. Most people choose family members or close friends. You cannot choose anyone who is already involved in your LPA.</p>
+
+<p>They’ll be told before the LPA is registered:</p>
+
+<ul class="govuk-list govuk-list--bullet">
+<li>the type of LPA you’ve made</li>
+<li>who your attorneys are </li>
+<li>how your attorneys will make decisions</li>
+<li>what to do if they have concerns</li>
+</ul>
+
+<h3 class="govuk-heading-s">Nominate someone to receive updates</h3>
+
+<p>You can choose someone to receive updates and reminders on your behalf on the progress of your LPA. This person is called a ‘correspondent’.</p>
+
       <nav class="govuk-prototype-kit-common-templates-pagination" role="navigation" aria-label="Pagination">
 
       {{ govukPagination({
