Added Contact the OPG chapter

--- a/app/views/register-lasting-power-of-attorney/contact-office-of-public-guardian.html
+++ b/app/views/register-lasting-power-of-attorney/contact-office-of-public-guardian.html
@@ -92,7 +92,58 @@ Register a lasting power of attorney: Contact the Office of the Public Guardian
         Contact the Office of the Public Guardian (OPG)
       </h2>
       
-      <p>Content goes here.</p>
+      <p>Contact the Office of the Public Guardian if you need help with making and registering an LPA.</p>
+
+      <p>If you email or write to OPG include:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>your full name, address and date of birth</li>
+        <li>whether you are the attorney or the donor</li>
+        <li>the donor’s full name address and date of birth (if you’re the attorney)</li>
+        <li>the LPA reference number</li>
+      </ul>
+
+      <div class="contact govuk-inset-text" style="border-left:1px solid #b1b4b6">
+     
+       <ul class="govuk-list">
+        <li>Office of the Public Guardian<br>
+      <a href="mailto:customerservices@publicguardian.gov.uk">customerservices@publicguardian.gov.uk</a> <br>
+      Telephone: 0300 456 0300 <br>
+      Textphone: 0115 934 2778 <br>
+        Monday, Tuesday, Thursday, Friday, 9am to 5pm<br>
+        Wednesday, 10am to 5pm </li>
+    
+      <li><a href="https://www.gov.uk/call-charges">Find out about call charges</a></li>
+    </ul>
+      </div>
+
+      <div class="contact govuk-inset-text" style="border-left:1px solid #b1b4b6">
+     
+        <ul class="govuk-list">
+          <li>Office of the Public Guardian<br>
+          PO Box 16185<br>
+          Birmingham<br>
+          B2 2WH</li>
+          </ul>
+        </div>
+
+        <h2 class="govuk-heading-l">
+          If you have a safeguarding concern
+        </h2>
+
+        <p>If you have concerns about either the LPA or the donor’s wellbeing, contact OPG’s Safeguarding Unit as soon as possible.</p>
+        <div class="contact govuk-inset-text" style="border-left:1px solid #b1b4b6">
+     
+          <ul class="govuk-list">
+           <li>OPG Safeguarding Unit<br>
+         <a href="mailto:opg.safeguardingunit@publicguardian.gov.uk">opg.safeguardingunit@publicguardian.gov.uk</a> <br>
+         Telephone: 0115 934 2777 <br>
+         Textphone: TBC <br>
+           Monday, Tuesday, Thursday, Friday, 9am to 5pm<br>
+           Wednesday, 10am to 5pm </li>
+       
+         <li><a href="https://www.gov.uk/call-charges">Find out about call charges</a></li>
+       </ul>
+         </div>        
 
       <nav class="govuk-prototype-kit-common-templates-pagination" role="navigation" aria-label="Pagination">
 
