--- a/app/views/register-lasting-power-of-attorney.html
+++ b/app/views/register-lasting-power-of-attorney.html
@@ -97,20 +97,22 @@
 		<p>This guide is also available <a href="https://www.gov.uk/xxxx">in Welsh (Cymraeg)</a>.</p></div>
 		
 	<p>Unlike a will, an LPA sets out what decisions your attorneys can make while you're alive.</p>
+  <p>There are 2 types of LPA:</p>
+  <ul class="govuk-list govuk-list--bullet">
+    <li>personal welfare, for health and care decisions</li>
+    <li>property and affairs, for financial decisions</li>
+  </ul>	
+<p>You can choose to make one type or both.</p>
 
-	<p> After an LPA has been registered, it can usually only be used when you've lost mental capacity. You can chose to let your attorney make property and financial decisions on your behalf as soon as it's registered.</p>
-	<p>You can cancel the LPA or remove certain attorneys at any time, whether it's been registered or not, as long as you have the mental capacity to do so.</p>
-	<p>The LPA ends when you die.</p>
-	<p>Your attorneys cannot use your LPA to make changes in your will.</p>
+	<p> Both LPAs can be used when they have been registered and when you have <a href="https://www.gov.uk/make-decisions-for-someone/assessing-mental-capacity">lost mental capacity</a>. You can also choose to use the property and affairs LPA while you still have mental capacity.
+	<p>You can cancel the LPA or remove attorneys at any time, whether it's been registered ot not, as long as you have the mental capacity to do so.</p>
+
+  <p>The LPA ends when you die.</p>
+
+  <p>Your attorneys cannot use your LPA to make changes to your will.</p>
 		  <div class="govuk-inset-text">
 		<p>There's a different <a href="https://www.publicguardian-scotland.gov.uk/power-of-attorney">process in Scotland</a> and <a href="https://www.nidirect.gov.uk/managing-your-affairs-and-enduring-power-of-attorney">process in Northern Ireland</a>.</p></div>
 		
-	<p>There are 2 types of LPA:</p>
-		<ul class="govuk-list govuk-list--bullet">
-			<li>personal welfare, for health and care decisions</li>
-			<li>property and affairs, for financial decisions</li>
-		</ul>	
-	<p>You can choose to make one type or both.</p>
 	
 	<h2 class="govuk-heading-l">Why you might make an LPA</h2>
 	<p>An LPA gives you more control over what happens to you if you have an accident or an illness and cannot make your own decisions (you 'lack mental capacity').</p>
@@ -122,7 +124,7 @@
 			<li>gives you more control</li></ul>
 	
 	<h2 class="govuk-heading-l">Who makes an LPA</h2>	
-	<p>You make your own lasting power of attorney but you can get help from a professional, like a solicitor, or from someone else you trust.</p>
+	<p>You make your own LPA but you can get help from someone you trust. You can also get help from a professional, like a solicitor or a charity. The decisions you make must be your own.</p>
   <p>You must:</p>
   <ul class="govuk-list govuk-list--bullet">
     <li>be aged 18 or over</li>
@@ -133,27 +135,20 @@
   <p>Other people involved in making an lasting power of attorney are your:</p>
   <ul class="govuk-list govuk-list--bullet">
     <li>attorneys - the people you choose to make decisions on your behalf</li>
-  <li>certificate provider - who checks that your LPA is legitimate and witnesses you signing it</li>
+  <li>certificate provider - who checks that you understand your LPA and want to make it</li>
   </ul>
 
   <h2 class="govuk-heading-l">How much does an LPA cost</h2>
-  <p>Registering an LPA costs £82.</p>
-  <p>If you're registering a personal welfare LPA and a property and affairs LPA it will cost £164 in total.</p>
+  <p>An LPA costs £82.</p>
+  <p>If you want both a personal welfate LPA and a property and affairs LPA it will cost £164 in total.</p>
   <p>If your annual income is under £12,000 you might be eligible for a 50% discount. If you're receiving certain income-related benefits you won't have to pay anything at all.</p>
 
   <h2 class="govuk-heading-l">How long does making an LPA take</h2>
-  <p>When everyone has signed and returned the LPA, there's a waiting period before it's registered. During the 4 week waiting period, people can <a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">make objections</a> to the LPA.</p>
+  <p>When everyone has signed and returned the LPA, there's a waiting period before it's registered. During the 4 week waiting period before it's registered for people to <a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">make objections</a> to the LPA.</p>
 
   <h2 class="govuk-heading-l">Get help from the Office of the Public Guardian</h2>
 
-  <p>Help deciding if you should make a lasting power of attorney.</p>
-<p><a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">Contact Office of the Public Guardian(OPG)</a> if you:</p>
-<ul class="govuk-list govuk-list--bullet">
-  <li>need help deciding if you should make an LPA</li>
-  <li>have any safeguarding concerns</li>
-</ul>
-
-<p>Anyone can <a href="/object-registration-power-attorney">object to the LPA</a> which may prevent it from being registered.</p>
+<p><a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">Contact Office of the Public Guardian(OPG)</a> if you need help decidging if you should make an LPA or if you have any concerns.</p>
 
       <nav class="govuk-prototype-kit-common-templates-pagination" role="navigation" aria-label="Pagination">
 
