--- a/app/views/register-lasting-power-of-attorney/prepare-lpa.html
+++ b/app/views/register-lasting-power-of-attorney/prepare-lpa.html
@@ -103,7 +103,7 @@ Register a lasting power of attorney: Preparing to make your LPA
       <p>You can choose to make one type or both. You do not need to have the same attorneys on both LPAs.</p>
 
       <h3 class="govuk-heading-s">Personal welfare lasting power of attorney</h3>
-      <p>Use this LPA to give an attorney the power to make decisions about things like:</p>
+      <p>Use this LPA to <a href="https://www.gov.uk/make-decisions-for-someone/making-decisions">allow an attoeney to make decisions</a>about things like:</p>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>your daily routine, for example washing, dressing, eating</li>
@@ -112,11 +112,11 @@ Register a lasting power of attorney: Preparing to make your LPA
         <li>life-sustaining treatment</li>
       </ul>
 
-      <p>It can only be used when you're unable to make your own decisions.</p>
+      <p>The LPA can only be used when you're unable to make your own decisions.</p>
 
       <h3 class="govuk-heading-s">Property and affairs lasting power of attorney</h3>
 
-      <p>Use this LPA to give an attorney the power to make decisions about money and property for you, for example:</p>
+      <p>Use this LPA to <a href="https://www.gov.uk/make-decisions-for-someone/making-decisions">allow an attorney to make decisions</a> about money and property for you, for example:</p>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>managing a bank or building society account</li>
@@ -125,7 +125,7 @@ Register a lasting power of attorney: Preparing to make your LPA
         <li>selling your home</li>
       </ul>
 
-      <p>It can be used as soon as it's registered, with your permission, or just when you're unable to make your own decisions.</p>
+      <p>Depending on what you’ve decided in your LPA, it can be used as soon as it’s registered, with your permission, or just when you’re unable to make your own decisions.</p>
 
       <h2 class="govuk-heading-l">
         Attorneys
@@ -137,7 +137,7 @@ Register a lasting power of attorney: Preparing to make your LPA
 
     <h3 class="govuk-heading-s">Who can be your attorney</h3>
 
-    <p>Your attorney needs to be 18 or over and have mental capacity to make their own decisions. They could be:</p>
+    <p>Your attorney does not need to have legal training. They need to be 18 or over and could be:</p>
 
     <ul class="govuk-list govuk-list--bullet">
       <li>a family member</li>
@@ -158,25 +158,29 @@ Register a lasting power of attorney: Preparing to make your LPA
 
   <p>Read about an <a href="#">attorney's responsibilities</a> to help you with your decision.</p>  
   
-  <p>Your attorney does not need to live in the UK, be a British citizen or have legal training.</p>
+  <p>Your attorney does not need to live in the UK or be a British citizen.</p>
 
-  <p>You cannot choose someone who is subject to a <a href="/options-for-dealing-with-your-debts/debt-relief-orders">Debt Relief Order</a> or <a href="/becoming-bankrupt/applying-to-become-bankrupt">someone who is bankrupt</a> if you're making an LPA for property and affairs.</p>
+  <p>You cannot choose someone who is subject to a <a href="/options-for-dealing-with-your-debts/debt-relief-orders">debt relief order</a> or <a href="/becoming-bankrupt/applying-to-become-bankrupt">someone who is bankrupt</a> if you're making an LPA for property and affairs.</p>
 
   <h3 class="govuk-heading-s">If there's more than one attorney</h3>
 
   <p>It's important to choose people who can work well together.</p>
-  <p>If you're appointing more than one person, you must decide if they'll make decisions either:</p>
+  <p>If you’re appointing more than one person, you must decide if they can make decisions on their own or together.</p>
 
-  <ul class="govuk-list govuk-list--bullet">
-    <li>separately or together (known as 'jointly and severally') - which means attorneys can make decisions on their own or with other attorneys</li>
-    <li>together (known as 'jointly') - which means all the attorneys have to agree on the decision</li>
-  </ul>
+  <h4 class="govuk-heading-s">Jointly and severally</h4>
 
-  <p>You can also choose to let them make some decisions'jointly', and then others 'jointly and severally'.</p>
+  <p>This means attorneys can make decisions on their own or with other attorneys. Your attorneys can share tasks. If one of your attorneys is unable to act, then decisions can still be made without them.</p>
 
-  <p>Attorneys who are appointed jointly must agree together or they cannot make the decision.</p>
+  <h4 class="govuk-heading-s">Jointly</h4>
 
-  <h3 class="govuk-heading-s">Appointing an attorney</h3>
+  <p>This means all attorneys have to agree on the decision. If one of your attorneys can no longer act, none of your other attorneys can act either unless you state this in your restrictions and conditions.</p>
+
+  <h4 class="govuk-heading-s">Both jointly and jointly and severally</h4>
+
+  <p>This means your attorneys must agree on certain decisions together but can make others on their own. If one of your attorneys can no longer act, your other attorneys will not be able to make the joint decisions without them unless you state this in your restrictions and conditions. For example, you could state that your attorneys must all agree if they want to sell your home, but they can make other decisions separately.</p>
+
+
+  <h3 class="govuk-heading-s">Choosing your attorneys</h3>
   <p>Talk to the person you want to appoint as your attorney.</p>
   <p>It's important they:</p>
   <ul class="govuk-list govuk-list--bullet">
@@ -191,80 +195,79 @@ Register a lasting power of attorney: Preparing to make your LPA
 
   <h3 class="govuk-heading-s">If an original attorney can no longer act on your behalf</h3>
 
-  <p>You can nominate ‘replacement attorneys’ to step in when you make your LPA.</p>
+  <p>When you make your LPA you can choose ‘replacement attorneys’ to step in.</p>
   <p>You do not have to appoint a replacement attorney but having one or more makes sure your LPA keeps working.</p>
-  <p>If you have not nominated a replacement attorney, your attorneys will not be able to make decisions jointly.</p>
-  <p>A replacement attorney must meet the same requirements as your other attorneys. If you have more than one replacement, you must decide the order they step in to replace your original attorneys.</p>
+  <p>If one of your attorneys can no longer act, none of your other attorneys will be able to act either. A replacement attorney must meet the same requirements as your other attorneys. If you have more than one replacement, you can decide the order they step in to replace your original attorneys.</p>
 
   <h2 class="govuk-heading-l">
-    Setting conditions and restrictions
+    Setting restrictions and conditions
   </h2> 
 
-  <p>You can limit what your attorneys can do in particular circumstances.</p>
-  <h3 class="govuk-heading-s">Example of a personal welfare LPA condition</h3>
+  <p>You can limit what your attorneys can do in particular circumstances by setting restrictions and conditions.</p>
 
-  <div class="govuk-inset-text">
-    <p>If I need to go into care, my attorneys must decide jointly about the home that I go into.</p>
-  </div>
+  <p>Your restrictions and conditions need to be clear. You may want to get legal advice when deciding them.</p>
+  <h3 class="govuk-heading-s">Restrictions</h3>
 
-  <h3 class="govuk-heading-s">Example of a property and affairs LPA condition</h3>
+  <p>A restriction is what your attorney must or must not do.</p>
 
-  <div class="govuk-inset-text">
-    <p>My attorneys must not sell my home unless I need to pay for care fees.</p>
-  </div>
+  <p>For example, you can say that you do not want your attorneys to sell your home.</p>
 
-  <p>Your conditions and restrictions need to be clear. You may want to get legal advice when deciding them.</p>
+  <h3 class="govuk-heading-s">Conditions</h3>
+
+  <p>A condition is what you would prefer your attorney to do in certain circumstances.</p>
+
+  <p>For example, you can tell your attorneys that they cannot sell your home unless your doctor thinks you can no longer live independently.</p>
+
   <h2 class="govuk-heading-l">
     Certificate provider
   </h2> 
-<p>You’ll need a certificate provider to help you register your LPA.</p>
+<p>You'll need a certificate provider to check you understand your LPA and want to make it.</p>
 <p>Choose an independent person, like a friend, neighbour or professional. Think about someone who you’re comfortable having an open, honest conversation with and who will raise concerns if they think something is wrong.</p>
 <p>They will need to witness your signature as the donor when you make the LPA.</p>
 <p>They will also need to ‘provide a certificate’ or ‘certify’ your LPA by confirming that:</p>
 
 <ul class="govuk-list govuk-list--bullet">
-<li>you understand the decisions you’ve made in the LPA and its purpose</li>
-<li>you are not under pressure to make the LPA</li>
-<li>you are who you say you are</li>
-<li>there’s no other reason that they know of for their LPA not to be created</li>
+<li>you understand the decisions you have made in your LPA and its purpose</li>
+<li>you have not been put under pressure to make it</li>
+<li>there is no fraud involbed in its creation</li>
+<li>there is no other reason it cannot be created</li>
 </ul>
 
 <h3 class="govuk-heading-s">Who can be your certificate provider</h3>
 
-<p>Your certificate provider needs to:</p>
+<p>Your certificate provider needs be 18 or over and either:</p>
 <ul class="govuk-list govuk-list--bullet">
-<li>be 18 or over</li>
-<li>have known you for over 2 years</li>
+<li>someone you have known for over 2 years</li>
+<li>a professional with relevant skills, such as a solicitor or your GPs</li>
 </ul>
 <p>They can be a legal professional such as a solicitor.</p>
-<p>They must:</p>
+<p>They must not be:</p>
 <ul class="govuk-list govuk-list--bullet">
-  <li>not be related to you or in a relationship with you</li>
-  <li>not working in a care home where you or one of your relatives lives</li>
-  <li>ot involved in the LPA in any other way</li>
+  <li>involved in the LPA in any other way</li>
+  <li>related to you or in a relationship with you</li>
+  <li>working in a care home where you or one of your relatives lives</li>
+  <li>an employee or business partner</li>
+  <li>a director or employee of a trust corporation that is involved in the LPA</li>
 </ul>
 
-<h3 class="govuk-heading-s">Appointing your certificate provider</h3>
+<p>The Court of Protection can also make decisions about people they do not think are suitable to be certificate providers.</p>
+
+<h3 class="govuk-heading-s">Choosing your certificate provider</h3>
 
 <p>Talk to the person you want to appoint as your certificate provider.</p>
 <p>It is important they agree to provide a certificate and can prove their identity.</p>
 
 <div class="govuk-inset-text">
-  <p>You cannot change your certificate provider after you’ve made your LPA. You’ll have to apply and pay for a new LPA.</p>
+  <p>You cannot change your certificate provider after you’ve signed your LPA. You may have to make and pay for a new LPA.</p>
 </div>
 
 <p>You’ll need to provide their name and contact details when making your LPA.</p>
-<p>After they have witnessed your signature, OPG will contact them separately to certify your LPA online or by post.</p>
+<p>After they have witnessed your signature, OPG will contact them separately to provide a certificate online or by post.</p>
 
-<h2 class="govuk-heading-l">
-  Other people involved in making your LPA
-</h2> 
 
-<p>You’ll need to provide names and contact details of any people you want to be involved in making your LPA.</p>
+<h2 class="govuk-heading-s">Tell people about your LPA</h2>
 
-<h3 class="govuk-heading-s">Tell people about your LPA</h3>
-
-<p>You can choose up to 5 people to be told about your LPA. They’re called ‘people to notify’. Most people choose family members or close friends. You cannot choose anyone who is already involved in your LPA.</p>
+<p>You can choose up to 5 people to be told about your LPA. They’re called ‘people to notify’. Most people choose family members or close friends.</p>
 
 <p>They’ll be told before the LPA is registered:</p>
 
