Updated Make and register chapter

--- a/app/views/register-lasting-power-of-attorney/prepare-lpa.html
+++ b/app/views/register-lasting-power-of-attorney/prepare-lpa.html
@@ -103,7 +103,7 @@ Register a lasting power of attorney: Preparing to make your LPA
       <p>You can choose to make one type or both. You do not need to have the same attorneys on both LPAs.</p>
 
       <h3 class="govuk-heading-s">Personal welfare lasting power of attorney</h3>
-      <p>Use this LPA to <a href="https://www.gov.uk/make-decisions-for-someone/making-decisions">allow an attoeney to make decisions</a>about things like:</p>
+      <p>Use this LPA to <a href="https://www.gov.uk/make-decisions-for-someone/making-decisions">allow an attorney to make decisions</a> about things like:</p>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>your daily routine, for example washing, dressing, eating</li>
@@ -127,15 +127,13 @@ Register a lasting power of attorney: Preparing to make your LPA
 
       <p>Depending on what you’ve decided in your LPA, it can be used as soon as it’s registered, with your permission, or just when you’re unable to make your own decisions.</p>
 
-      <h2 class="govuk-heading-l">
-        Attorneys
-      </h2>  
+      <h2 class="govuk-heading-l">Attorneys</h2>
 
       <p>You can choose one or more people to be your attorney.</p>
 
     <p>If you only have one and they have to stop being your attorney, your LPA will end.</p>
 
-    <h3 class="govuk-heading-s">Who can be your attorney</h3>
+    <h3 class="govuk-heading-m">Who can be your attorney</h3>
 
     <p>Your attorney does not need to have legal training. They need to be 18 or over and could be:</p>
 
