--- a/app/views/register-lasting-power-of-attorney/make-lpa.html
+++ b/app/views/register-lasting-power-of-attorney/make-lpa.html
@@ -92,7 +92,79 @@ Register a lasting power of attorney: Make your LPA
         Make your lasting power of attorney
       </h2>
       
-      <p>Content goes here.</p>
+      <p>While <a href="https://draft-origin.publishing.service.gov.uk/preparing-your-lpa">preparing to make your LPA</a> you should decide:</p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>the type of LPA you want</li>
+        <li>who you want as your attorneys</li>
+        <li>if you want any replacement attorneys</li>
+        <li>how you want your attorneys to make decisions</li>
+        <li>if you want to give any restrictions and conditions</li>
+        <li>who'll be your certificate provider</li>
+        <li>if you want to notify someone about the LPA</li>
+        </ul>
+
+        <p>You can ask someone else to help you create the LPA, for example a family member, friend or solicitor but the decisions you make must be your own.</p>
+
+        <h2 class="govuk-heading-l">What you'll need</h2>
+
+        <p>You'll need:</p>
+        
+        <ul class="govuk-list govuk-list--bullet">
+          <li>documents or information to prove your identity</li>
+          <li>a debit or credit card to pay the application fee</li>
+          <li>the name and address of your certificate provider</li>
+          <li>the name and address of each person to be notified</li>
+          </ul>
+
+          <p>For each attorney and replacement attorney, you'll need their:</p>
+
+          <ul class="govuk-list govuk-list--bullet">
+            <li>full name</li>
+            <li>address</li>
+            <li>date of birth</li>
+            <li>telephone number, if this is a mobile number they'll receive text updates</li>
+            <li>email address (if they have one)</li>
+            </ul>
+
+            <p>If you nominate someone to receive updates and reminders on your behalf, you’ll have to provide their:</p>
+
+            <ul class="govuk-list govuk-list--bullet">
+              <li>name</li>
+              <li>address</li>
+              <li>date of birth</li>
+              <li>telephone number, if this is a mobile number they'll receive text updates</li>
+              <li>email address (if they have one)</li>
+              </ul>
+
+              <p>If you’re eligible for a reduced fee for your LPA, you must also have the evidence to support your application. </p>
+
+              <h2 class="govuk-heading-l">Start making your LPA</h2>
+
+              <p>You can make an LPA online or by post. Your certificate provider and attorneys can use a different method to you.</p>
+
+              <h3 class="govuk-heading-m">Make your LPA online</h3>
+
+              <p>You'll need documents or information to  <a href="https://www.sign-in.service.gov.uk/about/checking-users-identities/evidence-types">prove your identify using GOV.UK One Login.</a></p>
+
+              <p>If you’ve not used GOV.UK One Login before, you’ll be asked to set up an account.</p>
+
+              <p>You can save and return to your application at a later date if you need to.</p>
+
+              <a href="#" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+                Start now
+                <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+                  <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+                </svg>
+              </a>
+
+              <h3 class="govuk-heading-m">Make an LPA by post</h3>
+
+              <p>You'll need to <a href="https://draft-origin.publishing.service.gov.uk/contact-xxxx">contact the Office of the Public Guardian (OPG)</a> to request an application pack by post. This pack will include the forms and instructions.</p>
+
+              <h2 class="govuk-heading-s">After you've signed and paid for the LPA</h2>
+
+              <p>Your certificate provider and attorneys will be contacted using the details you provide. They’ll be asked to check the details of your LPA.</p>
 
       <nav class="govuk-prototype-kit-common-templates-pagination" role="navigation" aria-label="Pagination">
 
