--- a/app/views/register-lasting-power-of-attorney/certificate-provider.html
+++ b/app/views/register-lasting-power-of-attorney/certificate-provider.html
@@ -92,30 +92,46 @@ Register a lasting power of attorney: Act as a certificate provider
         Act as a certificate provider
       </h2>
       
-      <p>You may be asked to help someone (the donor) make their lasting power of attorney (LPA) as a certificate provider.</p>
+      <p>You may be asked to be a certificate provider to help someone (the donor) when they’re making their lasting power of attorney (LPA).</p>
       <p>Providing a certificate for an LPA confirms that in your opinion:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>the donor understands the decisions they’ve made in the LPA and its purpose</li>
-        <li>the donor is not under pressure to make the LPA</li>
-        <li>the donor is who they say they are</li>
-        <li>there’s no other reason, that you know of, for their LPA not to be created</li>
+        <li>the donor has not been put under pressure to make it</li>
+        <li>there is no fraud involved in its creation</li>
+        <li>there is no other reason it cannot be created</li>
+      </ul>
+
+      <p>As a certificate provider you would need to:</p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>review the LPA</li>
+        <li>witness the LPA</li>
+        <li>provide a certificate</li>
+        <li>prove your identity</li>
       </ul>
 
 
 <h2 class="govuk-heading-l">Discuss the LPA with the donor</h2>
 
-<p>You’ll need to read the LPA and talk to the donor to check they understand it. You should discuss the LPA in private, without attorneys or other people present.</p>
+<p>You’ll need to read the LPA and talk to the donor to check they understand it. You should discuss the LPA in private, without attorneys or other people present.</p>
 <p>You should consider if they can: </p>
 <ul class="govuk-list govuk-list--bullet">
   <li>understand how the LPA works</li>
   <li>retain that information long enough to be able to make a decision</li>
   <li>weigh up the information available to make the decision</li>
-  <li>communicate their decision, for example: by talking, using sign language or movements like squeezing a hand</li>
+  <li>communicate their decision, for example by talking, using sign language or movements like squeezing a hand</li>
 </ul>
 
-<p>If they seem unusually anxious or are acting differently to how they normally would, consider if they're being pressured into making the LPA.</p>
+<p>If they seem unusually anxious or are acting differently to how they normally would, consider if they’re being pressured into making the LPA.</p>
 
-<h2 class="govuk-heading-l">If you agree with the LPA registration</h2>
+<h2 class="govuk-heading-l">If you have concerns about the LPA registration</h2>
+
+<p>If you do not feel you can certify the LPA, do not sign it and  <a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">contact the Office of the Public Guardian (OPG)</a> instead.</p>
+
+<p>You can also <a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">object to the LPA</a> which could prevent it from being registered.</p>
+
+
+<h2 class="govuk-heading-l">If you do not have concerns about the LPA registration</h2>
 
 <h3 class="govuk-heading-m">Sign the LPA as a witness</h3>
 
@@ -127,15 +143,9 @@ Register a lasting power of attorney: Act as a certificate provider
 
 <p>If you fail the identity check, the donor will have to make a new LPA.</p>
 
-<h2 class="govuk-heading-l">If you do not agree with the LPA registration</h2>
-
-<p>If you do not feel you can certify the LPA, do not sign it and  <a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">contact the Office of the Public Guardian (OPG)</a> instead.</p>
-
-<p>You can also <a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">object to the LPA</a> which could prevent it from being registered.</p>
-
 <h2 class="govuk-heading-l">If you do not want to be a certificate provider</h2>
 
-<p>You need to agree to be someone's certificate provider. You can refuse the role by telling the donor to contact OPG to start the LPA process again.</p>
+<p>If you do not want to be someone's certificate provider you can refuse the role by telling the donor to contact OPG to start the LPA process again.</p>
 
 <h2 class="govuk-heading-l">How to provide a certificate for the LPA</h2>
 
@@ -149,9 +159,9 @@ Register a lasting power of attorney: Act as a certificate provider
 
 <p>You'll also need to prove your identity as part of the process.</p>
 
-<h2 class="govuk-heading-l">Providing a certificate online</h2>
+<h3 class="govuk-heading-m">Providing a certificate online</h3>
 
-<p>You’ll need documents or information to <a href="https://www.sign-in.service.gov.uk/about/checking-users-identities/evidence-types">prove your identity using GOV.UK One Login</a>.</p>
+<p>You’ll need documents or information to <a href="https://www.sign-in.service.gov.uk/about/checking-users-identities/evidence-types">prove your identity using GOV.UK One Login.</a>You'll also need the reference number from your certificate provider email or letter.</p>
 
 <p>If you’ve not used GOV.UK One Login before, you’ll be asked to set up an account.</p>
 
@@ -168,7 +178,7 @@ Register a lasting power of attorney: Act as a certificate provider
 
 <h2 class="govuk-heading-l">After you’ve certified the LPA</h2>
 
-<p>OPG will let you know when it has received your certification and have confirmed your identity.</p>
+<p>OPG will let the donor know when it has received your certification and has confirmed your identity.</p>
 
 <p>Your role in the process is complete.</p>
 
