Updated the attorney chapter

--- a/app/views/register-lasting-power-of-attorney/attorney.html
+++ b/app/views/register-lasting-power-of-attorney/attorney.html
@@ -92,15 +92,17 @@ Register a lasting power of attorney: Agree to be an attorney
         Agree to be an attorney
       </h2>
       
-      <p>If you agree to be someone’s attorney, you’ll need to make decisions on their behalf following the principles of the Mental Capacity Act 2005 and the <a href="/government/publications/mental-capacity-act-code-of-practice">Mental Capacity Act Code of Practice</a>.</p>
+      <p>When acting as an attorney you’ll need to make decisions on the donor's behalf following the principles of the Mental Capacity Act 2005 and the <a href="/government/publications/mental-capacity-act-code-of-practice">Mental Capacity Act Code of Practice</a>.</p>
 
       <p>You must:</p>
    <ul class="govuk-list govuk-list--bullet">
+    <li>act as instructed bu donor in the LPA</li>
      <li>support the donor to make their own decisions wherever possible</li>
      <li>act in the donor’s best interests</li>
-     <li>act and make decisions when and how the donor has set out in their LPA</li>
-     <li>keep the donor’s money and property separate from your own (unless you already share a bank account)</li>
-     <li>respect the donor’s confidentiality</li>
+     <li>keep the donor's money and property separate from your own (unless you already share a bank account)</li>
+     <li>respect the donor's confidentiality</li>
+     <li>let the donor and the Office of the Public Guardian (OPG) know if you no longer wish to act as an attorney</li>
+     <li>if asked, provide OPG with information about how the LPA is being used</li>
      <li>keep records of your actions</li>
    </ul>
    <p>You must not:</p>
@@ -110,26 +112,16 @@ Register a lasting power of attorney: Agree to be an attorney
      <li>use the LPA unless it is registered</li>
    </ul>
 
-   <p>Read about ADD LINK HEREyour responsibilities as an attorney and how to use the LPA after it's registered.</p>
+   <p>Read about <a href="https://draft-origin.publishing.service.gov.uk/link"> your responsibilities as an attorney and how to use the LPA </a> after it's registered.</p>
 
-   <h2 class="govuk-heading-l">If you do not want to be an attorney</h2>
-
-   <p>You need to agree to become someone's attorney. You can:</p>
-   <ul class="govuk-list govuk-list--bullet">
-     <li>refuse the role</li>
-     <li>LINK HEREstop acting as an attorney after you've registered the LPA</li>
-   </ul>
-
-   <p>You can also  <a href="/object-registration-power-attorney">object to the registration</a> of an LPA if you've any concerns.</p>
-
-   <h2 class="govuk-heading-l">How to become an attorney</h2>
+   <h2 class="govuk-heading-l">How to agree</h2>
 
    <p>Make sure you understand:</p>
    <ul class="govuk-list govuk-list--bullet">
-     <li>LINK HERE your responsibilities as an attorney</li>
+     <li><a href="https://draft-origin.publishing.service.gov.uk/xxxx">your responsibilities as an attorney</a></li>
      <li>how to <a href="/make-decisions-for-someone/making-decisions">make decisions on the donor's behalf</a></li>
      <li>when and how you should make decisions with any other attorneys<li>
-      <li>the donor's decisions on any conditions and restrictions</li>
+      <li>any restrictions and conditions</li>
    </ul>
 
    <p>The Office of the Public Guardian (OPG) will contact you to sign the LPA separately. You can do it online or by post.</p>
@@ -138,11 +130,10 @@ Register a lasting power of attorney: Agree to be an attorney
    <ul class="govuk-list govuk-list--bullet">
      <li>read through the LPA</li>
      <li>sign the LPA as an attorney</li>
-     <li>prove your identity</li>
    </ul>
 
    <div class="govuk-inset-text">
-    <p>If your personal information is incorrect in the LPA, you'll need to <a href="/make-lasting-power-of-attorney/contact-the-office-of-the-public-guardian">contact OPG</a>.</p>
+    <p>If your personal information is incorrect, you'll need to <a href="/make-lasting-power-of-attorney/contact-the-office-of-the-public-guardian">contact OPG</a>.</p>
  </div>
  
  <h3 class="govuk-heading-m">Read and sign the LPA online</h3>
@@ -150,6 +141,8 @@ Register a lasting power of attorney: Agree to be an attorney
  <p>You'll need documents or information to <a href="https://www.sign-in.service.gov.uk/about/checking-users-identities/evidence-type">prove your identity using GOV.UK One Login</a>.</p>
 
  <p>If you've not used GOV.UK One Login before, you'll be asked to set up an account.</p>
+
+ <p>You’ll also need the LPA reference number. This will be in the letter or email you received telling you about the LPA.</p>
 
  <a href="#" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
   Start now
@@ -161,8 +154,22 @@ Register a lasting power of attorney: Agree to be an attorney
 
  <h3 class="govuk-heading-m">Read and sign the LPA by post</h3>
 
- <p>If you've not received a letter from OPG about being an attorney, it should include the paper form. If not, <a href="/make-lasting-power-of-attorney/contact-the-office-of-the-public-guardian">contact OPG</a> and ask for a paper form to be sent to you.</p>
+ <p>If you’ve received a letter from OPG about being an attorney, it should include the paper form. If not, <a href="/make-lasting-power-of-attorney/contact-the-office-of-the-public-guardian">contact OPG</a> and ask for a paper form to be sent to you.</p>
 
+ <p>Even if you’ve been sent a paper form, you can sign the LPA online if you’d prefer. </p>
+
+
+   <h2 class="govuk-heading-l">If you do not want to be an attorney</h2>
+
+   <p>If you're listed as an attorney and you do not want to be one, you can:</p>
+   <ul class="govuk-list govuk-list--bullet">
+     <li>refuse the role</li>
+     <li><a href="https://draft-origin.publishing.service.gov.uk/xxxx">stop acting as an attorney after you've registered the LPA</a></li>
+   </ul>
+
+   <p>You can also  <a href="/object-registration-power-attorney">object to the registration</a> of an LPA if you've any concerns.</p>
+
+   
  <h2 class="govuk-heading-l">After you've signed the LPA</h2>
 
  <p>You cannot act as an attorney until <a href="/make-lasting-power-of-attorney/after-the-lpa-is-registered">the LPA has been registered with OPG.</a> </p>
