--- a/app/views/register-lasting-power-of-attorney/after-lpa-registered.html
+++ b/app/views/register-lasting-power-of-attorney/after-lpa-registered.html
@@ -92,47 +92,64 @@ Register a lasting power of attorney: After the lpa is registered
         After the lasting power of attorney is registered
       </h2>
       
-      <p>When the LPA is registered, the Office of the Public Guardian (OPG) will notify:</p>
+      <p>The LPA is only registered when:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>it's signed by the donor, attorneys and certificate provider</li>
+        <li>the donor and certificate provider have confirmed their identity</li>
+        <li>the 4 week waiting period is over</li>
+      </ul>
+
+      <p>Once this is done, the Office of the Public Guardian (OPG) will notify:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>the donors</li>
         <li>the attorneys</li>
-        <li>anyone the donor has chosen to receive updates on their behalf, known as a ‘correspondent’</li>
-        <li>anyone the donor has asked to be told about their LPA, known as ‘people to notify’</li>
+        <li>any replacement attorneys</li>
       </ul>
 
-      <h2 class="govuk-heading-l">When you can use the LPA</h2>
+      <p>Anyone the donor has chosen to receive updates on their behalf, known as a ‘correspondent’, will get a letter confirming the LPA is registered.</p>
 
-      <p>You can only use the LPA when it’s been registered. </p>
+      <p>Anyone the donor has asked to be told about their LPA, known as ‘people to notify’, will only get notified about the intention to register. They won’t be told when the LPA is registered.</p>
 
-      <p>Health and welfare LPAs can only be used when the donor <a href="/make-decisions-for-someone/assessing-mental-capacity">no longer has the mental capacity </a>to make their own decisions.</p>
+      <h2 class="govuk-heading-l">When attorneys can use the LPA</h2>
+
+      <p>The attorneys can only use the LPA when it’s been registered.</p>
+
+      <p>Personal welfare LPAs can only be used when the donor <a href="/make-decisions-for-someone/assessing-mental-capacity">no longer has the mental capacity </a>to make their own decisions.</p>
     
-      <p>Property and affairs LPAs can be used as soon as they are registered while the donor has mental capacity and both:</p>
-      <ul class="govuk-list govuk-list--bullet">
-        <li>the LPA says they can</li>
-        <li>the donor gives permission</li>
-      </ul>
+      <p>Property and affairs LPAs can be used as soon as they are registered, with the donor's permission, or just when the donor is unable to make their own decisions, depending on what the donor has chosen in the LPA</p>
 
       <p>This could be on a short-term basis, for example when the donor’s on holiday, or to provide long-term help.</p>
 
       <p>When making decisions on behalf of the donor, the attorney needs to prove they’re named on the LPA.</p>
 
-      <p>Find out more about how the attoeny uses the LPA. NEED LINK HERE</p>
+      <p>Find out more about <a href="https://draft-origin.publishing.service.gov.uk/xxx">how attorneys use the LPA.</a></p>
 
       <h2 class="govuk-heading-l">Changes you need to report</h2>
 
-      <p>You need to report changes to OPG LINK HERE such as if the donor changes their contact details or an attorney dies.</p>
+      <p>The attorney needs to <a href=""https://draft-origin.publishing.service.gov.uk/xxx">report changes to OPG</a> such as:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>a change of address</li>
+        <li>a change of name</li>
+        <li>an attorney resigns ('disclaims')</li>
+        <li>an attorney dies</li>
+        <li>an attorney loses mental capacity</li>
+        <li>an attorney becomes bankrupt</li>
+        <li>an attorney divorces the donor</li>
+      </ul>
 
-      <p>As long as the donor still has mental capacity, they can remove certain attorneys.</p>
+      <p>Replacement attorneys can also report changes to OPG, so they can step in if needed.</p>
+
+      <p>As long as the donor still has mental capacity, they can also report changes.</p>
 
       <h2 class="govuk-heading-l">When the LPA ends</h2>
 
-      <p>There are several reasons an LPA will end LINK HERE including if:</p>
+      <p>There are several <a href="https://draft-origin.publishing.service.gov.uk/xxxx">reasons an LPA will end</a>including if:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>the donor dies</li>
+        <li>the donor cancels the LPA</li>
         <li>an attorney cannot act and there's no replacement attorney</li>
       </ul>
 
-      <p>The donor can also cancel the whole LPA, whether it’s been registered or not, as long as they have mental capacity to do so.</p>
     
       <nav class="govuk-prototype-kit-common-templates-pagination" role="navigation" aria-label="Pagination">
 
