Updated the contact OPG chapter

--- a/app/views/register-lasting-power-of-attorney/contact-office-of-public-guardian.html
+++ b/app/views/register-lasting-power-of-attorney/contact-office-of-public-guardian.html
@@ -98,8 +98,8 @@ Register a lasting power of attorney: Contact the Office of the Public Guardian
       <ul class="govuk-list govuk-list--bullet">
         <li>your full name, address and date of birth</li>
         <li>whether you are the attorney or the donor</li>
-        <li>the donor’s full name address and date of birth (if you’re the attorney)</li>
-        <li>the LPA reference number</li>
+        <li>the donor’s full name, address and date of birth (if you’re the attorney)</li>
+        <li>the LPA reference number (if it’s about an existing LPA)</li>
       </ul>
 
       <div class="contact govuk-inset-text" style="border-left:1px solid #b1b4b6">
@@ -126,13 +126,11 @@ Register a lasting power of attorney: Contact the Office of the Public Guardian
           </ul>
         </div>
 
-        <h2 class="govuk-heading-l">
-          If you have a safeguarding concern
-        </h2>
+        <h2 class="govuk-heading-l">If you have a concern</h2>
 
         <p>If you have concerns about either the LPA or the donor’s wellbeing, contact OPG’s Safeguarding Unit as soon as possible.</p>
+
         <div class="contact govuk-inset-text" style="border-left:1px solid #b1b4b6">
-     
           <ul class="govuk-list">
            <li>OPG Safeguarding Unit<br>
          <a href="mailto:opg.safeguardingunit@publicguardian.gov.uk">opg.safeguardingunit@publicguardian.gov.uk</a> <br>
