Fixing spelling mistakes

--- a/app/views/register-lasting-power-of-attorney.html
+++ b/app/views/register-lasting-power-of-attorney.html
@@ -105,7 +105,7 @@
 <p>You can choose to make one type or both.</p>
 
 	<p> Both LPAs can be used when they have been registered and when you have <a href="https://www.gov.uk/make-decisions-for-someone/assessing-mental-capacity">lost mental capacity</a>. You can also choose to use the property and affairs LPA while you still have mental capacity.
-	<p>You can cancel the LPA or remove attorneys at any time, whether it's been registered ot not, as long as you have the mental capacity to do so.</p>
+	<p>You can cancel the LPA or remove attorneys at any time, whether it's been registered or not, as long as you have the mental capacity to do so.</p>
 
   <p>The LPA ends when you die.</p>
 
@@ -132,7 +132,7 @@
   </ul>	
 	
   <p>You do not need to live in the UK or be a British citizen. [Awaiting current legal guidance for people who are ‘not habitually resident’.]</p>
-  <p>Other people involved in making an lasting power of attorney are your:</p>
+  <p>Other people involved in making a lasting power of attorney are your:</p>
   <ul class="govuk-list govuk-list--bullet">
     <li>attorneys - the people you choose to make decisions on your behalf</li>
   <li>certificate provider - who checks that you understand your LPA and want to make it</li>
@@ -140,7 +140,7 @@
 
   <h2 class="govuk-heading-l">How much does an LPA cost</h2>
   <p>An LPA costs £82.</p>
-  <p>If you want both a personal welfate LPA and a property and affairs LPA it will cost £164 in total.</p>
+  <p>If you want both a personal welfare LPA and a property and affairs LPA it will cost £164 in total.</p>
   <p>If your annual income is under £12,000 you might be eligible for a 50% discount. If you're receiving certain income-related benefits you won't have to pay anything at all.</p>
 
   <h2 class="govuk-heading-l">How long does making an LPA take</h2>
@@ -148,7 +148,7 @@
 
   <h2 class="govuk-heading-l">Get help from the Office of the Public Guardian</h2>
 
-<p><a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">Contact Office of the Public Guardian(OPG)</a> if you need help decidging if you should make an LPA or if you have any concerns.</p>
+<p><a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">Contact Office of the Public Guardian (OPG)</a> if you need help deciding if you should make an LPA or if you have any concerns.</p>
 
       <nav class="govuk-prototype-kit-common-templates-pagination" role="navigation" aria-label="Pagination">
 
