--- a/app/views/register-lasting-power-of-attorney/attorney.html
+++ b/app/views/register-lasting-power-of-attorney/attorney.html
@@ -96,7 +96,7 @@ Register a lasting power of attorney: Agree to be an attorney
 
       <p>You must:</p>
    <ul class="govuk-list govuk-list--bullet">
-    <li>act as instructed bu donor in the LPA</li>
+    <li>act as instructed by donor in the LPA</li>
      <li>support the donor to make their own decisions wherever possible</li>
      <li>act in the donor’s best interests</li>
      <li>keep the donor's money and property separate from your own (unless you already share a bank account)</li>
@@ -120,7 +120,7 @@ Register a lasting power of attorney: Agree to be an attorney
    <ul class="govuk-list govuk-list--bullet">
      <li><a href="https://draft-origin.publishing.service.gov.uk/xxxx">your responsibilities as an attorney</a></li>
      <li>how to <a href="/make-decisions-for-someone/making-decisions">make decisions on the donor's behalf</a></li>
-     <li>when and how you should make decisions with any other attorneys<li>
+     <li>when and how you should make decisions with any other attorneys</li>
       <li>any restrictions and conditions</li>
    </ul>
 
