--- a/app/views/register-lasting-power-of-attorney/prepare-lpa.html
+++ b/app/views/register-lasting-power-of-attorney/prepare-lpa.html
@@ -227,7 +227,7 @@ Register a lasting power of attorney: Preparing to make your LPA
 <ul class="govuk-list govuk-list--bullet">
 <li>you understand the decisions you have made in your LPA and its purpose</li>
 <li>you have not been put under pressure to make it</li>
-<li>there is no fraud involbed in its creation</li>
+<li>there is no fraud involved in its creation</li>
 <li>there is no other reason it cannot be created</li>
 </ul>
 
