Updated the prepare chapter

--- a/app/views/register-lasting-power-of-attorney/prepare-lpa.html
+++ b/app/views/register-lasting-power-of-attorney/prepare-lpa.html
@@ -127,7 +127,7 @@ Register a lasting power of attorney: Preparing to make your LPA
 
       <p>Depending on what you’ve decided in your LPA, it can be used as soon as it’s registered, with your permission, or just when you’re unable to make your own decisions.</p>
 
-      <h2 class="govuk-heading-l">Attorneys</h2>
+      <h2 class="govuk-heading-l">Choosing your attorneys</h2>
 
       <p>You can choose one or more people to be your attorney.</p>
 
@@ -160,30 +160,13 @@ Register a lasting power of attorney: Preparing to make your LPA
 
   <p>You cannot choose someone who is subject to a <a href="/options-for-dealing-with-your-debts/debt-relief-orders">debt relief order</a> or <a href="/becoming-bankrupt/applying-to-become-bankrupt">someone who is bankrupt</a> if you're making an LPA for property and affairs.</p>
 
-  <h3 class="govuk-heading-s">If there's more than one attorney</h3>
+  <h3 class="govuk-heading-s">Talk to the people you've chosen</h3>
 
-  <p>It's important to choose people who can work well together.</p>
-  <p>If you’re appointing more than one person, you must decide if they can make decisions on their own or together.</p>
-
-  <h4 class="govuk-heading-s">Jointly and severally</h4>
-
-  <p>This means attorneys can make decisions on their own or with other attorneys. Your attorneys can share tasks. If one of your attorneys is unable to act, then decisions can still be made without them.</p>
-
-  <h4 class="govuk-heading-s">Jointly</h4>
-
-  <p>This means all attorneys have to agree on the decision. If one of your attorneys can no longer act, none of your other attorneys can act either unless you state this in your restrictions and conditions.</p>
-
-  <h4 class="govuk-heading-s">Both jointly and jointly and severally</h4>
-
-  <p>This means your attorneys must agree on certain decisions together but can make others on their own. If one of your attorneys can no longer act, your other attorneys will not be able to make the joint decisions without them unless you state this in your restrictions and conditions. For example, you could state that your attorneys must all agree if they want to sell your home, but they can make other decisions separately.</p>
-
-
-  <h3 class="govuk-heading-s">Choosing your attorneys</h3>
-  <p>Talk to the person you want to appoint as your attorney.</p>
   <p>It's important they:</p>
+
   <ul class="govuk-list govuk-list--bullet">
     <li>agree to be your attorney</li>
-    <li>know what they’ll need to do</li>
+    <li>know what they'll need to do</li>
     <li>understand your decisions</li>
   </ul>
 
@@ -191,10 +174,31 @@ Register a lasting power of attorney: Preparing to make your LPA
 
   <p>The Office of the Public Guardian (OPG) will then contact them separately online or by post.</p>
 
+  <h2 class="govuk-heading-l">How multiple attorneys work together</h2>
+
+  <p>It's important to choose people who can work well together.</p>
+
+  <p>If you’re appointing more than one person, you must decide if they can make decisions on their own or together.</p>
+
+  <h3 class="govuk-heading-s">Jointly and severally</h3>
+
+  <p>This means attorneys can make decisions on their own or with other attorneys. Your attorneys can share tasks. If one of your attorneys is unable to act, then decisions can still be made without them.</p>
+
+  <h3 class="govuk-heading-s">Jointly</h3>
+
+  <p>This means all attorneys have to agree on the decision. If one of your attorneys can no longer act, none of your other attorneys can act either unless you state this in your restrictions and conditions.</p>
+
+  <h3 class="govuk-heading-s">Both jointly and jointly and severally</h3>
+
+  <p>This means your attorneys must agree on certain decisions together but can make others on their own. If one of your attorneys can no longer act, your other attorneys will not be able to make the joint decisions without them unless you state this in your restrictions and conditions. For example, you could state that your attorneys must all agree if they want to sell your home, but they can make other decisions separately.</p>
+
+
   <h3 class="govuk-heading-s">If an original attorney can no longer act on your behalf</h3>
 
   <p>When you make your LPA you can choose ‘replacement attorneys’ to step in.</p>
+
   <p>You do not have to appoint a replacement attorney but having one or more makes sure your LPA keeps working.</p>
+  
   <p>If one of your attorneys can no longer act, none of your other attorneys will be able to act either. A replacement attorney must meet the same requirements as your other attorneys. If you have more than one replacement, you can decide the order they step in to replace your original attorneys.</p>
 
   <h2 class="govuk-heading-l">
