--- a/app/views/register-lasting-power-of-attorney.html
+++ b/app/views/register-lasting-power-of-attorney.html
@@ -144,7 +144,7 @@
   <p>If your annual income is under £12,000 you might be eligible for a 50% discount. If you're receiving certain income-related benefits you won't have to pay anything at all.</p>
 
   <h2 class="govuk-heading-l">How long does making an LPA take</h2>
-  <p>When everyone has signed and returned the LPA, there's a 4 week waiting period before it's registered. This is so that people can <a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">make objections</a> to the LPA.</p>
+  <p>When everyone has signed and returned the LPA, there's a 4 week waiting period before it's registered. This is so that people can <a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">make objections to the LPA.</a></p>
 
   <h2 class="govuk-heading-l">Get help from the Office of the Public Guardian</h2>
 
