removed extra wording around habitually resident

--- a/app/views/register-lasting-power-of-attorney.html
+++ b/app/views/register-lasting-power-of-attorney.html
@@ -131,7 +131,7 @@
     <li>have mental capacity when the LPA is made</li>
   </ul>	
 	
-  <p>You do not need to live in the UK or be a British citizen. [Awaiting current legal guidance for people who are ‘not habitually resident’.]</p>
+  <p>You do not need to live in the UK or be a British citizen.</p>
   <p>Other people involved in making a lasting power of attorney are your:</p>
   <ul class="govuk-list govuk-list--bullet">
     <li>attorneys - the people you choose to make decisions on your behalf</li>
