--- a/app/views/register-lasting-power-of-attorney.html
+++ b/app/views/register-lasting-power-of-attorney.html
@@ -88,9 +88,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds govuk-prototype-kit-common-templates-mainstream-guide-body">
       
-      <h2 class="govuk-heading-l">
+      <h1 class="govuk-heading-l">
         Overview
-      </h2>
+      </h1>
       
       <p>A lasting power of attorney (LPA) is a legal document that allows you (as 'the donor') to choose one or more trusted people ('attorneys') to act and make decisions on your behalf.</p>
 	  <div class="govuk-inset-text">
@@ -114,7 +114,7 @@
 		<p>There's a different <a href="https://www.publicguardian-scotland.gov.uk/power-of-attorney">process in Scotland</a> and <a href="https://www.nidirect.gov.uk/managing-your-affairs-and-enduring-power-of-attorney">process in Northern Ireland</a>.</p></div>
 		
 	
-	<h2 class="govuk-heading-l">Why you might make an LPA</h2>
+	<h2 class="govuk-heading-m">Why you might make an LPA</h2>
 	<p>An LPA gives you more control over what happens to you if you have an accident or an illness and cannot make your own decisions (you 'lack mental capacity').</p>
 	<p>If you do not have an LPA and lose the mental capacity to make your own decisions, someone else will need to <a href="https://www.gov.uk/become-deputy">apply to a court to become your deputy</a>.</p>
 	<p>Making an LPA instead of having a court appointed deputy:</p>
@@ -123,7 +123,7 @@
 			<li>costs less money</li>
 			<li>gives you more control</li></ul>
 	
-	<h2 class="govuk-heading-l">Who makes an LPA</h2>	
+	<h2 class="govuk-heading-m">Who makes an LPA</h2>	
 	<p>You make your own LPA but you can get help from someone you trust. You can also get help from a professional, like a solicitor or a charity. The decisions you make must be your own.</p>
   <p>You must:</p>
   <ul class="govuk-list govuk-list--bullet">
@@ -138,15 +138,15 @@
   <li>certificate provider - who checks that you understand your LPA and want to make it</li>
   </ul>
 
-  <h2 class="govuk-heading-l">How much does an LPA cost</h2>
+  <h2 class="govuk-heading-m">How much does an LPA cost</h2>
   <p>An LPA costs £82.</p>
   <p>If you want both a personal welfare LPA and a property and affairs LPA it will cost £164 in total.</p>
   <p>If your annual income is under £12,000 you might be eligible for a 50% discount. If you're receiving certain income-related benefits you won't have to pay anything at all.</p>
 
-  <h2 class="govuk-heading-l">How long does making an LPA take</h2>
+  <h2 class="govuk-heading-m">How long does making an LPA take</h2>
   <p>When everyone has signed and returned the LPA, there's a 4 week waiting period before it's registered. This is so that people can <a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">make objections to the LPA.</a></p>
 
-  <h2 class="govuk-heading-l">Get help from the Office of the Public Guardian</h2>
+  <h2 class="govuk-heading-m">Get help from the Office of the Public Guardian</h2>
 
 <p><a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">Contact Office of the Public Guardian (OPG)</a> if you need help deciding if you should make an LPA or if you have any concerns.</p>
 
