Changing heading sizes

--- a/app/views/register-lasting-power-of-attorney/prepare-lpa.html
+++ b/app/views/register-lasting-power-of-attorney/prepare-lpa.html
@@ -127,13 +127,13 @@ Register a lasting power of attorney: Preparing to make your LPA
 
       <p>Depending on what you’ve decided in your LPA, it can be used as soon as it’s registered, with your permission, or just when you’re unable to make your own decisions.</p>
 
-      <h2 class="govuk-heading-l">Choosing your attorneys</h2>
+      <h2 class="govuk-heading-m">Choosing your attorneys</h2>
 
       <p>You can choose one or more people to be your attorney.</p>
 
     <p>If you only have one and they have to stop being your attorney, your LPA will end.</p>
 
-    <h3 class="govuk-heading-m">Who can be your attorney</h3>
+    <h3 class="govuk-heading-s">Who can be your attorney</h3>
 
     <p>Your attorney does not need to have legal training. They need to be 18 or over and could be:</p>
 
@@ -174,7 +174,7 @@ Register a lasting power of attorney: Preparing to make your LPA
 
   <p>The Office of the Public Guardian (OPG) will then contact them separately online or by post.</p>
 
-  <h2 class="govuk-heading-l">How multiple attorneys work together</h2>
+  <h2 class="govuk-heading-m">How multiple attorneys work together</h2>
 
   <p>It's important to choose people who can work well together.</p>
 
@@ -201,7 +201,7 @@ Register a lasting power of attorney: Preparing to make your LPA
   
   <p>If one of your attorneys can no longer act, none of your other attorneys will be able to act either. A replacement attorney must meet the same requirements as your other attorneys. If you have more than one replacement, you can decide the order they step in to replace your original attorneys.</p>
 
-  <h2 class="govuk-heading-l">
+  <h2 class="govuk-heading-m">
     Setting restrictions and conditions
   </h2> 
 
@@ -220,7 +220,7 @@ Register a lasting power of attorney: Preparing to make your LPA
 
   <p>For example, you can tell your attorneys that they cannot sell your home unless your doctor thinks you can no longer live independently.</p>
 
-  <h2 class="govuk-heading-l">
+  <h2 class="govuk-heading-m">
     Certificate provider
   </h2> 
 <p>You'll need a certificate provider to check you understand your LPA and want to make it.</p>
@@ -267,7 +267,7 @@ Register a lasting power of attorney: Preparing to make your LPA
 <p>After they have witnessed your signature, OPG will contact them separately to provide a certificate online or by post.</p>
 
 
-<h2 class="govuk-heading-s">Tell people about your LPA</h2>
+<h2 class="govuk-heading-m">Tell people about your LPA</h2>
 
 <p>You can choose up to 5 people to be told about your LPA. They’re called ‘people to notify’. Most people choose family members or close friends.</p>
 
